# Illusion-Cursor-dev-kit

./: .gitignore  METHODOLOGY.md  README.md  package-lock.json  package.json
.cursor/rules/: angelscript-docs-reference.mdc  angelscript-primary-cpp-fallback.mdc  angelscript-save-immediate-effect.mdc  angelscript-tdd-agent-iteration.mdc  as-api-dynamic-query-authority.mdc  blueprint-snapshot-cognition.mdc  blueprint-snapshot-search.mdc  design-doc-equivalent.mdc  design-doc-execute-plan-terminology.mdc  git-local-repos-and-p4.mdc  harness.mdc  locale-zh.mdc  no-edit-engine-source.mdc  subagents-workflow-augmentation.mdc  ue-automation-testing.mdc  ue-dev-kit.mdc  ue-editor-path.mdc
backup-repo/: config  packed-refs
content/: .gitignore  plan.md
content/design/: README.md  player-overlay-revolverpistol.md
content/dev/: README.md  automation-three-steps.md  cpp-tests.md  git-automation.md  no-ue-first-tests.md  openspec-manteum-tower.md  pitfall-capture.md  pitfalls-inbox.md  player-overlay-mode-extension.md  soft-ue-cli.md  subagents-workflow-augmentation-runbooks.md  ue-automation-tests.md  unattended-ue-automation.md
content/dev/cpp-tests/: CMakeLists.txt  README.md
content/dev/cpp-tests/src/: sample.cpp  sample.h
content/dev/cpp-tests/tests/: test_sample.cpp
content/knowledge/: 01-project-architecture-overview.md  02-ue-dev.md  03-angelscript-ue.md  04-decisions.md  05-gotchas.md  06-lessons-blueprint-serializer.md  07-blueprint-query-workflow.md  07-blueprint-snapshot-for-agent.md  08-player-3c-animation-system.md  09-player-animation-system.md  (+9 more)
(+8591 files in other folders)
